--- a/.github/workflows/review-app.yml
+++ b/.github/workflows/review-app.yml
@@ -1,7 +1,8 @@
 name: Clever Cloud Review App
 
 on:
-  pull_request:
+  pull_request_target:
+    
     types: [opened, synchronize, reopened, closed]
     branches:
       - [ md/configurationCICD ]
