:rocket: création de la CI pour le review-app wip

--- a/.github/workflows/review-app.yml
+++ b/.github/workflows/review-app.yml
@@ -1,8 +1,7 @@
 name: Clever Cloud Review App
 
 on:
-  pull_request_target:
-    
+  pull_request:
     types: [opened, synchronize, reopened, closed]
     branches:
       - [ md/configurationCICD ]
