--- a/.github/workflows/review-app.yml
+++ b/.github/workflows/review-app.yml
@@ -41,7 +41,7 @@ jobs:
         env: 
           CLEVER_TOKEN: ${{ secrets.CLEVER_TOKEN }}
           CLEVER_SECRET: ${{ secrets.CLEVER_SECRET }}
-          ORGA_ID: ${{ secrets.ORGA_ID }}
+          ORGA_ID: ${{ secrets.CLEVER_ORGA_ID }}
         run: |
           clever create --type node ${{ github.event.pull_request.head.repo.name}}-PR-${{ github.event.number }} --alias ${{ github.event.pull_request.head.repo.name}}-PR-${{ github.event.number }} --region par --org "$ORGA_ID"
           clever domain add ${{ github.event.pull_request.head.repo.name}}-PR-${{ github.event.number }}.cleverapps.io
