:rocket: test mise à jour de l'environnement update

--- a/.github/workflows/review-app.yml
+++ b/.github/workflows/review-app.yml
@@ -110,7 +110,7 @@ jobs:
     permissions:
       issues: write
       pull-requests: write
-    if: always() && github.event_name == 'pull_request_target' && github.event.action == 'closed'
+    if: always() && github.event.action == 'closed'
     steps:
       - name: install clever-tools
         run: npm install -g clever-tools
