--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint",
     "start": "next start",
     "test": "vitest run",
+    "test:coverage": "pnpm test --coverage",
     "test:watch": "vitest"
   },
   "dependencies": {
@@ -20,10 +21,14 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@vitejs/plugin-react": "^4.3.0",
+    "@vitest/coverage-istanbul": "^1.6.0",
     "depcheck": "^1.4.7",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
+    "jsdom": "^24.0.0",
     "typescript": "^5",
-    "vitest": "^1.6.0"
+    "vitest": "^1.6.0",
+    "vitest-dom": "^0.1.1"
   }
 }
