:sparkles: Mise en place du package Stylelint

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "deadcode": "knip",
     "depcheck": "depcheck",
     "dev": "next dev --turbo",
-    "lint": "next lint",
+    "lint:css": "stylelint 'src/**/*.css'",
+    "lint:ts": "next lint",
     "start": "next start",
     "test": "vitest run",
     "test:coverage": "pnpm test --coverage",
@@ -30,6 +31,9 @@
     "eslint-config-next": "14.2.3",
     "jsdom": "^24.0.0",
     "knip": "^5.16.0",
+    "stylelint": "^16.5.0",
+    "stylelint-config-standard": "^36.0.0",
+    "stylelint-order": "^6.0.4",
     "typescript": "^5",
     "vitest": "^1.6.0",
     "vitest-dom": "^0.1.1"
