:sparkles: Mise en place de la configuration Eslint

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "depcheck": "depcheck",
     "dev": "next dev --turbo",
     "lint:css": "stylelint 'src/**/*.css'",
-    "lint:ts": "next lint",
+    "lint:ts": "eslint . --ext .tsx,.ts --max-warnings=0",
     "start": "next start",
     "test": "vitest run",
     "test:coverage": "pnpm test --coverage",
@@ -24,11 +24,21 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@typescript-eslint/eslint-plugin": "^7.10.0",
+    "@typescript-eslint/parser": "^7.10.0",
     "@vitejs/plugin-react": "^4.3.0",
     "@vitest/coverage-istanbul": "^1.6.0",
     "depcheck": "^1.4.7",
-    "eslint": "^8",
+    "eslint": "^8.57.0",
     "eslint-config-next": "14.2.3",
+    "eslint-plugin-deprecation": "^2.0.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-sort-keys-fix": "^1.1.2",
+    "eslint-plugin-testing-library": "^6.2.2",
+    "eslint-plugin-unused-imports": "^3.2.0",
+    "eslint-plugin-vitest": "^0.4.1",
     "jsdom": "^24.0.0",
     "knip": "^5.16.0",
     "stylelint": "^16.5.0",
