--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@gouvfr/dsfr": "^1.11.2",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18"
