--- a/.github/workflows/review-app.yml
+++ b/.github/workflows/review-app.yml
@@ -9,6 +9,9 @@ on:
         description: 'Execution manuelle du workflow'
         required: true
         default: 'md/configurationCICD'
+      pr_number:
+        description: 'Numéro de la PR à déployer'
+        required: true
 jobs:
   deploy:
     if: github.event_name == 'workflow_dispatch' || github.event.action == 'opened' || github.event.action == 'reopened'
@@ -18,14 +21,14 @@ jobs:
       pull-requests: write
       contents: read
     environment:
-      name: review/${{ github.event.number }}
+       name: review/${{ github.event_name == 'workflow_dispatch' && github.event.inputs.pr_number || github.event.number }}
     steps:
-      - run: echo "Le nom de la branche est ${{ github.ref }} et le nom du repository est ${{ github.repository }}"
+      - run: echo "Le nom de la branche est ${{ github.event.inputs.branch || github.ref }} et le nom du repository est ${{ github.repository }}"
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          repository: ${{ github.event.pull_request.head.repo.full_name }}
-          ref: ${{ github.event.pull_request.head.ref }}
+          repository: ${{ github.event_name == 'workflow_dispatch' && github.repository || github.event.pull_request.head.repo.full_name }}
+          ref: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.branch || github.event.pull_request.head.ref }}
           token: ${{ secrets.GITHUB_TOKEN }}
           fetch-depth: 0
       - run: echo "Le repository cloné est ${{ github.repository }} a été cloné dans le runner de GitHub"
@@ -41,7 +44,7 @@ jobs:
           CLEVER_SECRET: ${{ secrets.CLEVER_SECRET }}
           ORGA_ID: ${{ secrets.CLEVER_ORGA_ID }}
         run: |
-          APP_NAME=${{ github.event.pull_request.head.repo.name }}-PR-${{ github.event.number }}
+          APP_NAME="${{ github.repository }}-PR-${{ github.event_name == 'workflow_dispatch' && github.event.inputs.pr_number || github.event.number }}"
           clever create --type static-apache "$APP_NAME" --alias "$APP_NAME" --region par --org "$ORGA_ID" || echo "Application $APP_NAME already exists."
           clever env set CC_WEBROOT "/out" --alias "$APP_NAME"
           clever env set CC_PRE_BUILD_HOOK "npm install" --alias "$APP_NAME"
@@ -53,8 +56,8 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
-            const issue_number = context.payload.pull_request.number;
-            const message = `Environnement déployé avec succès accessible [ici](https://${{ github.event.pull_request.head.repo.name }}-PR-${{ github.event.number }}.cleverapps.io)`;
+            const issue_number = ${{ github.event_name == 'workflow_dispatch' ? github.event.inputs.pr_number : github.event.number }};
+            const message = `Environnement déployé avec succès accessible [ici](https://${{ github.repository }}-PR-${{ github.event_name == 'workflow_dispatch' && github.event.inputs.pr_number || github.event.number }}.cleverapps.io)`;
             github.rest.issues.createComment({
               owner: context.repo.owner,
               repo: context.repo.repo,
