--- a/.github/workflows/review-app.yml
+++ b/.github/workflows/review-app.yml
@@ -41,7 +41,7 @@ jobs:
           CLEVER_SECRET: ${{ secrets.CLEVER_SECRET }}
           ORGA_ID: ${{ secrets.CLEVER_ORGA_ID }}
         run: |
-          APP_NAME=${{ github.event.pull_request.head.repo.name }}-PR-${{ github.event.number }}
+          APP_NAME="${{ github.event.pull_request.head.repo.name }}-PR-${{ github.event.number }}"
           clever create --type static-apache "$APP_NAME" --alias "$APP_NAME" --region par --org "$ORGA_ID"
           clever env set CC_WEBROOT "/out" --alias "$APP_NAME"
           clever env set CC_PRE_BUILD_HOOK "npm install" --alias "$APP_NAME"
@@ -86,7 +86,7 @@ jobs:
           CLEVER_TOKEN: ${{ secrets.CLEVER_TOKEN }}
           ORGA_ID: ${{ secrets.CLEVER_ORGA_ID }}
         run: | 
-          APP_NAME=${{ github.event.pull_request.head.repo.name }}-PR-${{ github.event.number }}
+          APP_NAME="${{ github.event.pull_request.head.repo.name }}-PR-${{ github.event.number }}"
           clever link -o "$ORGA_ID" "$APP_NAME" || echo "Application $APP_NAME not found, skipping link."
           clever deploy --alias "$APP_NAME" --force
       - name: Comment PR
