--- a/.github/workflows/review-app.yml
+++ b/.github/workflows/review-app.yml
@@ -53,7 +53,7 @@ jobs:
           clever env set CC_OVERRIDE_BUILDCACHE "/out" --alias "$APP_NAME"
           clever domain add "$APP_NAME.cleverapps.io" --alias "$APP_NAME"
           clever deploy --alias "$APP_NAME"
-      - name: Commentaires PR
+      - name: Informations relatives à l'environnement
         uses: actions/github-script@v7
         with:
           script: |
@@ -62,7 +62,7 @@ jobs:
             github.rest.issues.createComment({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              issue_number: issue_number,
+              title: `Déploiement de l'environnement pour ${{ github.event.inputs.app_name }}`,
               body: message
             });
         env:
