:test_tube: retrait erreur par défaut création instance (nommage)

--- a/.github/workflows/review-app.yml
+++ b/.github/workflows/review-app.yml
@@ -9,12 +9,12 @@ on:
         description: 'Execution manuelle du workflow'
         required: true
         default: 'md/configurationCICD'
-      pr_number:
-        description: 'Pull Request Number'
+      app_name:
+        description: "Nom de l'environnement à déployer"
         required: true
 jobs:
   deploy:
-    if: github.event_name == 'workflow_dispatch' || github.event.action == 'opened' || github.event.action == 'reopened'
+    if: github.event_name == 'workflow_dispatch'
     runs-on: ubuntu-latest
     permissions:
       issues: write
@@ -44,24 +44,26 @@ jobs:
           CLEVER_SECRET: ${{ secrets.CLEVER_SECRET }}
           ORGA_ID: ${{ secrets.CLEVER_ORGA_ID }}
         run: |
-          APP_NAME=${{ github.event.pull_request.head.repo.name }}-PR-${{ github.event.number }}
-          clever create --type static-apache "$APP_NAME" --alias "$APP_NAME" --region par --org "$ORGA_ID""
+          APP_NAME="${{ github.event.inputs.app_name }}"
+          echo "Le nom de l'environnement est $APP_NAME"
+          clever create --type static-apache "$APP_NAME" --alias "$APP_NAME" --region par --org "$ORGA_ID"
           clever env set CC_WEBROOT "/out" --alias "$APP_NAME"
           clever env set CC_PRE_BUILD_HOOK "npm install" --alias "$APP_NAME"
           clever env set CC_POST_BUILD_HOOK "npm run build" --alias "$APP_NAME"
           clever env set CC_OVERRIDE_BUILDCACHE "/out" --alias "$APP_NAME"
           clever domain add "$APP_NAME.cleverapps.io" --alias "$APP_NAME"
           clever deploy --alias "$APP_NAME"
-      - name: Commentaires PR
+      - name: Informations relatives à l'environnement
         uses: actions/github-script@v7
         with:
           script: |
-            const issue_number = context.payload.pull_request.number;
-            const message = `Environnement déployé avec succès accessible [ici](https://${{ github.event.pull_request.head.repo.name }}-PR-${{ github.event.number }}.cleverapps.io)`;
+            const message = `Environnement déployé avec succès accessible [ici](https://${{ github.event.inputs.app_name }}.cleverapps.io)`;
+            const issue_number = context.payload.pull_request.number
             github.rest.issues.createComment({
+              issue_number: issue_number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              issue_number: issue_number,
+              title: `Déploiement de l'environnement pour ${{ github.event.inputs.app_name }}`,
               body: message
             });
         env:
@@ -89,19 +91,18 @@ jobs:
           CLEVER_TOKEN: ${{ secrets.CLEVER_TOKEN }}
           ORGA_ID: ${{ secrets.CLEVER_ORGA_ID }}
         run: | 
-          APP_NAME=${{ github.event.pull_request.head.repo.name }}-PR-${{ github.event.number }}
+          APP_NAME="${{ github.event.inputs.app_name }}"
           clever link -o "$ORGA_ID" "$APP_NAME" || echo "Application $APP_NAME not found, skipping link."
           clever deploy --alias "$APP_NAME" --force
       - name: Comment PR
         uses: actions/github-script@v7
         with:
           script: |
-            const issue_number = context.payload.pull_request.number;
-            const message = `🚀 L'environnement à été mis à jour et est disponible [ici](https://${{ github.event.pull_request.head.repo.name }}-PR-${{ github.event.number }}.cleverapps.io)`;
+            const message = `🚀 L'environnement à été mis à jour et est disponible [ici](https://${{ github.event.inputs.app_name}}.cleverapps.io)`;
             github.rest.issues.createComment({
+              issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              issue_number: issue_number,
               body: message
             });
         env:
@@ -121,18 +122,17 @@ jobs:
           CLEVER_TOKEN: ${{ secrets.CLEVER_TOKEN }}
           ORGA_ID: ${{ secrets.CLEVER_ORGA_ID }}
         run: |
-          clever link -o "$ORGA_ID" ${{ github.event.pull_request.head.repo.name }}-PR-${{ github.event.number }}
-          clever delete --alias ${{ github.event.pull_request.head.repo.name }}-PR-${{ github.event.number }} --yes
+          clever link -o "$ORGA_ID" ${{ github.event.inputs.app_name }}
+          clever delete --alias ${{ github.event.inputs.app_name }} --yes
       - name: Comment PR
         uses: actions/github-script@v7
         with:
           script: |
-            const issue_number = context.payload.pull_request.number;
             const message = `L'environnement de test a été supprimé avec succès 👋`;
             github.rest.issues.createComment({
+              issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              issue_number: issue_number,
               body: message
             });
         env:
