:test_tube: retrait erreur par défaut création instance (nommage)

--- a/.github/workflows/review-app.yml
+++ b/.github/workflows/review-app.yml
@@ -8,10 +8,6 @@ on:
       branch:
         description: 'Execution manuelle du workflow'
         required: true
-        default: 'md/configurationCICD'
-      pull_request_number:
-        description: 'Pull Request Number'
-        required: true
       app_name:
         description: "Nom de l'environnement à déployer"
         required: true
@@ -61,12 +57,11 @@ jobs:
         with:
           script: |
             const message = `Environnement déployé avec succès accessible [ici](https://${{ github.event.inputs.app_name }}.cleverapps.io)`;
-            const prNumber = ${{ github.event.inputs.pull_request_number }};
+            const branchName = ${{ github.event.inputs.branch_name }};
             github.rest.issues.createComment({
-              issue_number: prNumber,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              title: `Déploiement de l'environnement pour ${{ github.event.inputs.app_name }}`,
+              title: `Déploiement de l'environnement pour ${branchName}`,
               body: message
             });
         env:
